// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalNewsDeleteModal /> should render correctly 1`] = `
<Modal
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  bsSize="large"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      className="uppercase"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="global.removeActuality"
        tagName="b"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <FormattedHTMLMessage
      id="global.confirm-delete"
      tagName="p"
      values={Object {}}
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="danger"
      id="confirm-post-delete"
      label="global.removeDefinitively"
      onSubmit={[Function]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalNewsDeleteModal /> should render correctly with modal open 1`] = `
<Modal
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  bsSize="large"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      className="uppercase"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="global.removeActuality"
        tagName="b"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <FormattedHTMLMessage
      id="global.confirm-delete"
      tagName="p"
      values={Object {}}
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="danger"
      id="confirm-post-delete"
      label="global.removeDefinitively"
      onSubmit={[Function]}
    />
  </ModalFooter>
</Modal>
`;
